@@ -5,6 +5,7 @@
     <script src="../../../../lib/howler/howler.min.js"></script>
     <script src="../../../../lib/require.js"></script>
     <script src="../../../../lib/goo.js"></script>
+	<script src="../../../../lib/howlerpack.js"></script>
     <script src="../../../lib/vtest.js"></script>
     <script src="Howler-vtest.js"></script>
     <style>
